# FALCHUAN

./: .gitattributes  LICENSE  README.md  README_en.md  README_zh.md
BGP_3/: CMakeLists.txt  compress.cpp  main.cpp  mainwindow.cpp
BGP_3/Sources/Forms/: mainwindow.ui
BGP_3/Sources/Headers/: mainwindow.h
FALCHUAN_VS/: CompressMethod.cpp  CompressMethod.h  FALCHUAN.cpp  FALCHUAN.h  FALCHUAN.qrc  FALCHUAN.ui  main.cpp
FALCHUAN_VS/include/: openblas_config.h
FALCHUAN_VS/include/armadillo_bits/: config.hpp
FALCHUAN_VS/lib/: armadillo.lib  libopenblas.def  libopenblas.exp  libopenblas.lib  zfp.lib
FALCHUAN_VS/lib/cmake/openblas/: OpenBLASConfig.cmake  OpenBLASConfigVersion.cmake
FALCHUAN_VS/lib/cmake/zfp/: zfp-config-version.cmake  zfp-config.cmake  zfp-targets-debug.cmake  zfp-targets.cmake
FALCHUAN_VS/lib/pkgconfig/: armadillo.pc  openblas64.pc
